# shelby

./: LICENSE  README.md  pyproject.toml
.github/workflows/: test.yml
demo/: demo.sh  test_safety.py
shelby/: cli.py  config.py  core.py  history.py  repl.py  safety.py
shelby.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
shelby/providers/: anthropic.py  base.py  google.py  ollama.py  openai.py
